false columbis, true CT

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
               <option value="AR">Arkansas, AR</option>
               <option value="">California, CA</option>
               <option value="CO">Colorado, CO</option>
-              <option value="">Connecticut, CT</option>
+              <option value="CT">Connecticut, CT</option>
               <option value="">Delaware, DE</option>
-              <option value="DC">District Of Columbia, DC</option>
+              <option value="">District Of Columbia, DC</option>
               <option value="FL">Florida, FL</option>
               <option value="">Georgia, GA</option>
               <option value="HI">Hawaii, HI</option>
