--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </header>
 
         <div class="pY-3">
-          <p>
+          <p class="parrafo">
             Please answer a few simple questions to check eligibility. It will
             take about 2 minutes of your time at max.
           </p>
