--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <!-- Card 4 -->
       <div class="answer d-none" id="answer4">
         <header>
-          <h2>The QR-Code of the application</h2>
+          <h2>Desktop users can scan QR-code with mobile phone</h2>
           
           <div class="url-container pT-3">
             <div class="output_url-container">
